-- ============================================================
-- 시군구 참조 테이블 생성 및 시드 데이터
-- TourAPI 실제 attraction 데이터 기준 (alphabetical 코드 순서)
--
-- [참고] 이 시드는 이후 schema.sql에 통합되었습니다.
--   - 신규 셋업: schema.sql 하나로 충분 (이 파일 적용 불필요)
--   - 시도 테이블 / sigungu.alias 컬럼은 migration_sido_v1.sql 참조
--   - 지역 명칭의 최신 출처는 TourAPI areaCode2 동기화
--     (POST /api/admin/attractions/sync/regions, 또는 일일 배치)
-- 과거 적용 이력 보존을 위해 파일은 유지합니다.
-- ============================================================

CREATE TABLE IF NOT EXISTS sigungu (
    sido_code    TINYINT     NOT NULL COMMENT '시도 코드 (1=서울, 31=경기 등)',
    sigungu_code TINYINT     NOT NULL COMMENT '시도 내 시군구 코드 (TourAPI 기준)',
    name         VARCHAR(50) NOT NULL,
    PRIMARY KEY (sido_code, sigungu_code)
) DEFAULT CHARSET = utf8mb4;

TRUNCATE TABLE sigungu;

INSERT INTO sigungu (sido_code, sigungu_code, name) VALUES
-- 서울(1): 25구 — TourAPI 가나다 순
(1,1,'강남구'),(1,2,'강동구'),(1,3,'강북구'),(1,4,'강서구'),(1,5,'관악구'),
(1,6,'광진구'),(1,7,'구로구'),(1,8,'금천구'),(1,9,'노원구'),(1,10,'도봉구'),
(1,11,'동대문구'),(1,12,'동작구'),(1,13,'마포구'),(1,14,'서대문구'),(1,15,'서초구'),
(1,16,'성동구'),(1,17,'성북구'),(1,18,'송파구'),(1,19,'양천구'),(1,20,'영등포구'),
(1,21,'용산구'),(1,22,'은평구'),(1,23,'종로구'),(1,24,'중구'),(1,25,'중랑구'),

-- 인천(2): 8구 2군
(2,1,'강화군'),(2,2,'계양구'),(2,3,'미추홀구'),(2,4,'남동구'),(2,5,'동구'),
(2,6,'부평구'),(2,7,'서구'),(2,8,'연수구'),(2,9,'옹진군'),(2,10,'중구'),

-- 대전(3): 5구
(3,1,'대덕구'),(3,2,'동구'),(3,3,'서구'),(3,4,'유성구'),(3,5,'중구'),

-- 대구(4): 7구 1군 + 군위군(편입)
(4,1,'남구'),(4,2,'달서구'),(4,3,'달성군'),(4,4,'동구'),(4,5,'북구'),
(4,6,'서구'),(4,7,'수성구'),(4,8,'중구'),(4,9,'군위군'),

-- 광주(5): 5구
(5,1,'광산구'),(5,2,'남구'),(5,3,'동구'),(5,4,'북구'),(5,5,'서구'),

-- 부산(6): 15구 1군
(6,1,'강서구'),(6,2,'금정구'),(6,3,'기장군'),(6,4,'남구'),(6,5,'동구'),
(6,6,'동래구'),(6,7,'부산진구'),(6,8,'북구'),(6,9,'사상구'),(6,10,'사하구'),
(6,11,'서구'),(6,12,'수영구'),(6,13,'연제구'),(6,14,'영도구'),(6,15,'중구'),
(6,16,'해운대구'),

-- 울산(7): 4구 1군
(7,1,'중구'),(7,2,'남구'),(7,3,'동구'),(7,4,'북구'),(7,5,'울주군'),

-- 세종(8): 세종특별자치시 (시군구 없음)
(8,1,'세종시'),

-- 경기(31): 28시 3군
(31,1,'가평군'),(31,2,'고양시'),(31,3,'과천시'),(31,4,'광명시'),(31,5,'광주시'),
(31,6,'구리시'),(31,7,'군포시'),(31,8,'김포시'),(31,9,'남양주시'),(31,10,'동두천시'),
(31,11,'부천시'),(31,12,'성남시'),(31,13,'수원시'),(31,14,'시흥시'),(31,15,'안산시'),
(31,16,'안성시'),(31,17,'안양시'),(31,18,'양주시'),(31,19,'양평군'),(31,20,'여주시'),
(31,21,'연천군'),(31,22,'오산시'),(31,23,'용인시'),(31,24,'의왕시'),(31,25,'의정부시'),
(31,26,'이천시'),(31,27,'파주시'),(31,28,'평택시'),(31,29,'포천시'),(31,30,'하남시'),
(31,31,'화성시'),

-- 강원(32): 7시 11군
(32,1,'강릉시'),(32,2,'고성군'),(32,3,'동해시'),(32,4,'삼척시'),(32,5,'속초시'),
(32,6,'양구군'),(32,7,'양양군'),(32,8,'영월군'),(32,9,'원주시'),(32,10,'인제군'),
(32,11,'정선군'),(32,12,'철원군'),(32,13,'춘천시'),(32,14,'태백시'),(32,15,'평창군'),
(32,16,'홍천군'),(32,17,'화천군'),(32,18,'횡성군'),

-- 충북(33): 3시 8군 (code 9 공백 — 청원군 청주시 편입)
(33,1,'괴산군'),(33,2,'단양군'),(33,3,'보은군'),(33,4,'영동군'),(33,5,'옥천군'),
(33,6,'음성군'),(33,7,'제천시'),(33,8,'진천군'),(33,10,'청주시'),(33,11,'충주시'),
(33,12,'증평군'),

-- 충남(34): 8시 7군 (code 10 공백 — 연기군 세종시 편입)
(34,1,'공주시'),(34,2,'금산군'),(34,3,'논산시'),(34,4,'당진시'),(34,5,'보령시'),
(34,6,'부여군'),(34,7,'서산시'),(34,8,'서천군'),(34,9,'아산시'),(34,11,'예산군'),
(34,12,'천안시'),(34,13,'청양군'),(34,14,'태안군'),(34,15,'홍성군'),(34,16,'계룡시'),

-- 경북(35): 10시 13군 (code 5 공백)
(35,1,'경산시'),(35,2,'경주시'),(35,3,'고령군'),(35,4,'구미시'),(35,6,'김천시'),
(35,7,'문경시'),(35,8,'봉화군'),(35,9,'상주시'),(35,10,'성주군'),(35,11,'안동시'),
(35,12,'영덕군'),(35,13,'영양군'),(35,14,'영주시'),(35,15,'영천시'),(35,16,'예천군'),
(35,17,'울릉군'),(35,18,'울진군'),(35,19,'의성군'),(35,20,'청도군'),(35,21,'청송군'),
(35,22,'칠곡군'),(35,23,'포항시'),

-- 경남(36): 8시 10군 (codes 6·11·14 공백)
(36,1,'거제시'),(36,2,'거창군'),(36,3,'고성군'),(36,4,'김해시'),(36,5,'남해군'),
(36,7,'밀양시'),(36,8,'사천시'),(36,9,'산청군'),(36,10,'양산시'),(36,12,'의령군'),
(36,13,'진주시'),(36,15,'창녕군'),(36,16,'창원시'),(36,17,'통영시'),(36,18,'하동군'),
(36,19,'함안군'),(36,20,'함양군'),(36,21,'합천군'),

-- 전북(37): 6시 8군
(37,1,'고창군'),(37,2,'군산시'),(37,3,'김제시'),(37,4,'남원시'),(37,5,'무주군'),
(37,6,'부안군'),(37,7,'순창군'),(37,8,'완주군'),(37,9,'익산시'),(37,10,'임실군'),
(37,11,'장수군'),(37,12,'전주시'),(37,13,'정읍시'),(37,14,'진안군'),

-- 전남(38): 5시 17군 (codes 14·15 공백)
(38,1,'강진군'),(38,2,'고흥군'),(38,3,'곡성군'),(38,4,'광양시'),(38,5,'구례군'),
(38,6,'나주시'),(38,7,'담양군'),(38,8,'목포시'),(38,9,'무안군'),(38,10,'보성군'),
(38,11,'순천시'),(38,12,'신안군'),(38,13,'여수시'),(38,16,'영광군'),(38,17,'영암군'),
(38,18,'완도군'),(38,19,'장성군'),(38,20,'장흥군'),(38,21,'진도군'),(38,22,'함평군'),
(38,23,'해남군'),(38,24,'화순군'),

-- 제주(39): 2시 (code 1·2 공백 — TourAPI는 3·4 사용)
(39,3,'서귀포시'),(39,4,'제주시');
